--- a/Chap-LitReview.Rnw
+++ b/Chap-LitReview.Rnw
@@ -26,12 +26,12 @@ The fitted calibration line is given as
 \label{eqn:fitted-slr-model}
   \wh{\mu} = \wh{\beta}_0 + \wh{\beta}_1 x,
 \end{equation}
-where $\wh{\beta}_0$ and $\wh{\beta}_1$ are the ML estimates of $\beta_0$ and $\beta_1$, respectively. If we observe $\mc{Y}_0 = y_0$, where $\mc{Y}_0 \sim \mc{N}(\beta_0 + \beta_1 x_0, \sigma_\epsilon^2)$, then the obvious estimate of $x_0$ is obtained by "inverting" the calibration line:
+where $\wh{\beta}_0$ and $\wh{\beta}_1$ are the \ac{ML} estimates of $\beta_0$ and $\beta_1$, respectively. If we observe $\mc{Y}_0 = y_0$, where $\mc{Y}_0 \sim \mc{N}(\beta_0 + \beta_1 x_0, \sigma_\epsilon^2)$, then the obvious estimate of $x_0$ is obtained by "inverting" the calibration line:
 \begin{equation}
 \label{eqn:x0-mle}
   \wh{x}_0 = {f}^{-1}(y_0; \bm{\beta}) = \frac{y_0 - \wh{\beta}_0}{\wh{\beta}_1} = \bar{x} + \frac{S_{xx}}{S_{xy}}(y_0 - \bar{y}),
 \end{equation}
-where $S_{xy} = \sum(x_i-\bar{x})(y_i-\bar{y})$, and $S_{xx} = \sum(x_i-\bar{x})^2$. Under the assumption of i.i.d. normal errors, Equation~\eqref{eqn:x0-mle} is the ML estimate of $x_0$. More generally, suppose in addition to the standards 
+where $S_{xy} = \sum(x_i-\bar{x})(y_i-\bar{y})$, and $S_{xx} = \sum(x_i-\bar{x})^2$. Under the assumption of i.i.d. normal errors, Equation~\eqref{eqn:x0-mle} is the \ac{ML} estimate of $x_0$. More generally, suppose in addition to the standards 
 \begin{equation*}
   (x_1, \mc{Y}_1), (x_2, \mc{Y}_2), \dotsc, (x_n, \mc{Y}_n),
 \end{equation*}
@@ -55,7 +55,7 @@ The log-likelihood for all $n + m$ observations is
   \ell\left(\beta_0, \beta_1, \sigma_\epsilon^2, x_0\right) = &-\frac{n+m}{2}\log(2\pi\sigma_\epsilon^2)-\\ &\quad \frac{1}{2\sigma_\epsilon^2}\left[\sum_{i=1}^n(\mc{Y}_i-\beta_0-\beta_1x_i)^2 + \sum_{i=n+1}^{n+m}(\mc{Y}_i-\beta_0-\beta_1x_0)^2\right].
 \end{split}
 \end{equation*}
-Equating the partial derivatives of $\ell\left(\beta_0, \beta_1, \sigma_\epsilon^2, x_0\right)$ to zero and solving for the parameters produces the usual ML estimators of the slope and intercept, but also yields
+Equating the partial derivatives of $\ell\left(\beta_0, \beta_1, \sigma_\epsilon^2, x_0\right)$ to zero and solving for the parameters produces the usual \ac{ML} estimators of the slope and intercept, but also yields
 \begin{align}
   \wh{x}_0 &= \frac{\wb{\mc{Y}}_0-\wh{\beta}_0}{\wh{\beta}_1} \label{eqn:x0-mle2} \\
   \wh{\sigma}_\epsilon^2 &= \frac{1}{n+m-3}\left[\sum_{i=1}^n\left(\mc{Y}_i-\wh{\beta}_0-\wh{\beta}_1 x_i\right)^2 + \sum_{i=n+1}^{n+m}\left(\mc{Y}_i-\wb{\mc{Y}}_0\right)^2\right] \label{eqn:pooledvar},
@@ -80,22 +80,22 @@ where $\wh{\gamma}_0$ and $\wh{\gamma}_1$ are least squares (LS) estimates, and 
 \label{eqn:x0-inverse2}
   \wt{x}_0 = \left(1-\frac{S_{xy}^2}{S_{xx}S_{yy}}\right)\bar{x} + \frac{S_{xy}^2}{S_{xx}S_{yy}}\wh{x}_0 = \left(1-R^2\right)\bar{x} + R^2\wh{x}_0,
 \end{equation}
-where $R^2$ is the coefficient of determination computed from \eqref{eqn:fitted-slr-model}. This shows $\wt{x}_0$ as a weighted average of the ML estimator $\wh{x}_0$ and $\bar{x}$; hence, the inverse estimator takes into account previous information about $x_0$ (this is relevant to Section~\ref{sec:bayesian} where the inverse estimator is shown to be Bayes with respect to a certain prior on $x_0$). Also, when the error variance is zero, $R^2 = 1$ and $\wt{x}_0 = \wh{x}_0$. 
+where $R^2$ is the coefficient of determination computed from \eqref{eqn:fitted-slr-model}. This shows $\wt{x}_0$ as a weighted average of the \ac{ML} estimator $\wh{x}_0$ and $\bar{x}$; hence, the inverse estimator takes into account previous information about $x_0$ (this is relevant to Section~\ref{sec:bayesian} where the inverse estimator is shown to be Bayes with respect to a certain prior on $x_0$). Also, when the error variance is zero, $R^2 = 1$ and $\wt{x}_0 = \wh{x}_0$. 
 
 Inference based on this approach, at least from the frequentist perspective, is justifiable only if the observations $(x_i, y_i)$ are sampled from a bivariate distribution (i.e., a natural calibration experiment). In controlled calibration experiments, $x$ is held fixed and the classical estimator is mostly preferred. Nonetheless, much effort has gone into justifying the use of the inverse estimator in controlled calibration (see, for example, \citet{krutchkoff_classical_1967} and more recently \citet{kannan_comparison_2007}).
 
 \subsection{Criticisms and other estimators}
 \label{sec:criticisms}
-Using extensive Monte Carlo simulations, \citet{krutchkoff_classical_1967} argued that the inverse estimator \eqref{eqn:x0-inverse} had a uniformly smaller MSE than the classical estimator \eqref{eqn:x0-mle}. His experiments considered both normal and non-normal error distributions. This sparked controversy in the statistical community resulting in a renewed interest in the inverse estimator for controlled calibration. In a later paper \citep{krutchkoff_classical_1969}, Krutchkoff concluded that the classical approach is superior for large sample sizes when extrapolating beyond the range of observations. 
+Using extensive Monte Carlo simulations, \citet{krutchkoff_classical_1967} argued that the inverse estimator \eqref{eqn:x0-inverse} had a uniformly smaller \ac{MSE} than the classical estimator \eqref{eqn:x0-mle}. His experiments considered both normal and non-normal error distributions. This sparked controversy in the statistical community resulting in a renewed interest in the inverse estimator for controlled calibration. In a later paper \citep{krutchkoff_classical_1969}, Krutchkoff concluded that the classical approach is superior for large sample sizes when extrapolating beyond the range of observations. 
 
-When the error distribution is normal and $n \ge 4$, the inverse estimator has finite MSE \citep{oman_exact_1985}; whereas the classical estimator has infinite MSE for finite $n$ \citep{williams_note_1969}. Further, \citet{williams_note_1969} established that "...no unbiased estimator [of $x_0$] will have finite variance", arguing that MSE is an inappropriate criterion for comparing the two estimators. \citet{halperin_inverse_1970} agreed with Williams and suggested the use of the \textit{Pitman closeness} criterion (\citealt{pitman_closest_1937}; \citealt[pg. 290]{mood_introduction_1974}) instead. For a parameter $\phi$ with parameter space $\Phi$, an estimator $T_1$ is said to be Pitman closer (to $\phi$) than another estimator $T_2$ if for all $\phi \in \Phi$,
+When the error distribution is normal and $n \ge 4$, the inverse estimator has finite \ac{MSE} \citep{oman_exact_1985}; whereas the classical estimator has infinite \ac{MSE} for finite $n$ \citep{williams_note_1969}. Further, \citet{williams_note_1969} established that "...no unbiased estimator [of $x_0$] will have finite variance", arguing that \ac{MSE} is an inappropriate criterion for comparing the two estimators. \citet{halperin_inverse_1970} agreed with Williams and suggested the use of the \textit{Pitman closeness} criterion (\citealt{pitman_closest_1937}; \citealt[pg. 290]{mood_introduction_1974}) instead. For a parameter $\phi$ with parameter space $\Phi$, an estimator $T_1$ is said to be Pitman closer (to $\phi$) than another estimator $T_2$ if for all $\phi \in \Phi$,
 \begin{equation}
 %\label{eqn:pitman}
   P_\phi(|T_1 - \phi| < |T_2 - \phi|) > 0.5.
 \end{equation}
-Unlike the MSE criterion, Pitman closeness takes into consideration the correlation between the two estimators being compared (here, they are perfectly correlated). With respect to the Pitman closeness criterion, Halperin claimed that the classical estimator is superior both outside and within the range of predictor values; though, Halperin's conclusions were based on asymptotic approximations. In addition, Halperin also compared the two estimators in terms of consistency and MSE of the relevant asymptotic distributions, showing that Krutchkoff's findings were only true for a closed interval around $\bar{x}$. The width of this interval depends on the product of the standardized slope and standard deviation of the predictor values, $\sigma_x$. Halperin also preferred the classical estimator on the basis that it yields an exact $100(1 - \alpha)\%$ confidence region for $x_0$ (see Section~\ref{sec:inversion-interval}). In response, \citet{krutchkoff_calibration_1972} used the Pitman closeness criterion in Monte Carlo simulations and obtained the opposite results; that is, the inverse estimator was overall superior to the classical estimator. The contradiction seems to stem from the range of predictor values considered by both authors.
+Unlike the \ac{MSE} criterion, Pitman closeness takes into consideration the correlation between the two estimators being compared (here, they are perfectly correlated). With respect to the Pitman closeness criterion, Halperin claimed that the classical estimator is superior both outside and within the range of predictor values; though, Halperin's conclusions were based on asymptotic approximations. In addition, Halperin also compared the two estimators in terms of consistency and \ac{MSE} of the relevant asymptotic distributions, showing that Krutchkoff's findings were only true for a closed interval around $\bar{x}$. The width of this interval depends on the product of the standardized slope and standard deviation of the predictor values, $\sigma_x$. Halperin also preferred the classical estimator on the basis that it yields an exact $100(1 - \alpha)\%$ confidence region for $x_0$ (see Section~\ref{sec:inversion-interval}). In response, \citet{krutchkoff_calibration_1972} used the Pitman closeness criterion in Monte Carlo simulations and obtained the opposite results; that is, the inverse estimator was overall superior to the classical estimator. The contradiction seems to stem from the range of predictor values considered by both authors.
 
-The classical and inverse estimators cannot be compared through exact moments, however, one can easily examine their asymptotic properties. \citet{berkson_estimation_1969} established that the classical estimator is asymptotically unbiased while the inverse estimator is not. He derives formulas for the asymptotic bias, variance, and MSE of both estimators. \citet{shukla_problem_1972} extended these formulas to an accuracy of $O(n^{-1})$:
+The classical and inverse estimators cannot be compared through exact moments, however, one can easily examine their asymptotic properties. \citet{berkson_estimation_1969} established that the classical estimator is asymptotically unbiased while the inverse estimator is not. He derives formulas for the asymptotic bias, variance, and \ac{MSE} of both estimators. \citet{shukla_problem_1972} extended these formulas to an accuracy of $O(n^{-1})$:
 \begin{align*}
   \bias\left\{\wh{x}_0\right\} &\approx \frac{\sigma_\epsilon^2}{S_{xx}\beta_1^2}(x_0 - \bar{x}) \\
   \var\left\{\wh{x}_0\right\} &\approx \frac{\sigma_\epsilon^2}{\beta_1^2}\left[ \frac{1}{m} + \frac{1}{n} + \frac{(x_0 - \bar{x})^2}{S_{xx}} + \frac{3\sigma_\epsilon^2}{m S_{xx} \beta_1^2} \right] \\
@@ -104,7 +104,7 @@ The classical and inverse estimators cannot be compared through exact moments, h
   \var\left\{\wt{x}_0\right\} &\approx \frac{\sigma_\epsilon^2}{\beta_1^2\theta^2}\left[ \frac{1}{m} + \frac{1}{n} + \frac{(x_0 - \bar{x})^2}{S_{xx}} + \frac{\sigma_\epsilon^2(\theta^2-2\theta+6)}{m S_{xx}\beta_1^2\theta^2} \right] \newln - \frac{2\sigma^4(x_0-\bar{x})^2}{n\theta^4\beta_1^4\sigma_x^4} \\
   \MSE\left\{\wt{x}_0\right\} &\approx \frac{\sigma_\epsilon^2}{\beta_1^2\theta^2}\left[ \frac{1}{m} + \frac{1}{n} + \frac{(x_0 - \bar{x})^2}{S_{xx}} + \frac{\sigma_\epsilon^2(\theta^2-2\theta+6)}{m S_{xx}\beta_1^2\theta^2} \right] \newln - \frac{\sigma^4(x_0-\bar{x})^2}{\theta^2\beta_1^4\sigma_x^4}\left(1-\frac{6}{n\theta^2}\right),
 \end{align*}
-where $\sigma_x^2 = S_{xx}/(n-1)$ and $\theta = 1 + \sigma_\epsilon^2/(\beta_1\sigma_x)^2$. \citet{lwin_discussion_1981} provided a further extension by allowing the error distribution to be any member of the location-scale family of distributions. To an accuracy of $O(n^{-1})$, Lwin showed that the asymptotic MSE of the classical estimator for any error distribution from the location-scale family is the same as that obtained by \citet{shukla_problem_1972}. The same is not true for the inverse estimator whose MSE to the same order is affected by both the skewness and kurtosis of the error distribution.
+where $\sigma_x^2 = S_{xx}/(n-1)$ and $\theta = 1 + \sigma_\epsilon^2/(\beta_1\sigma_x)^2$. \citet{lwin_discussion_1981} provided a further extension by allowing the error distribution to be any member of the location-scale family of distributions. To an accuracy of $O(n^{-1})$, Lwin showed that the asymptotic \ac{MSE} of the classical estimator for any error distribution from the location-scale family is the same as that obtained by \citet{shukla_problem_1972}. The same is not true for the inverse estimator whose \ac{MSE} to the same order is affected by both the skewness and kurtosis of the error distribution.
 
 \citet{kannan_comparison_2007} obtained more accurate results supporting the use of the inverse estimator. However, they found that when $|\beta_1/\sigma|$ is moderate to large, the classical method is preferred in the sense of Pitman closeness. \citet{ali_calibration_2002} discussed the impact of the coefficient of determination and proposed an estimator based on the midpoint of the \textit{inversion interval} for $x_0$ (see Section~\ref{sec:inversion-interval}). \citet{lwin_analysis_1982} takes a \textit{compound estimation} approach to the linear calibration problem. They discuss the merits of both estimators and provide further justification for each without reference to specific distributional assumptions. Lwin and Maritz concluded that the classical estimator is preferred only if the condition of asymptotic unbiased is imposed. A likelihood analysis for the calibration problem was carried out by \citet{minder_likelihood_1975}. 
 
@@ -117,9 +117,9 @@ Finally, note that most of the previous discussion was in reference to the linea
 %% Example--arsenic concentration data
 \subsection{Arsenic example}
 \label{sec:example_arsenic}
-Here we illustrate the use of the classical and inverse estimators on the arsenic data, for which the simple linear regression model seems appropriate. The assumptions of normality and constant variance were examined using appropriate plots and found to be within reason. This is a controlled calibration experiment since the true concentrations of arsenic were preselected by the experimenter. We wish to estimate the true concentration of arsenic in a new sample based on the new observation $y_0 = 3$ $\mu$g/ml. Figure~\ref{fig:arsenic-fit} shows a scatterplot of the standards with the fitted calibration line. The ML estimate of $x_0$ is 2.941 $\mu$g/ml while the inverse estimate is 2.945 $\mu$g/ml, a difference of only 0.004. In practice, the two estimators will not be much different when the coefficient of determination, $R^2$, is close to one. For the arsenic data, $R^2 = 0.9936$ (recall Equation~\ref{eqn:x0-inverse}).
+Here we illustrate the use of the classical and inverse estimators on the arsenic data, for which the simple linear regression model seems appropriate. The assumptions of normality and constant variance were examined using appropriate plots and found to be within reason. This is a controlled calibration experiment since the true concentrations of arsenic were preselected by the experimenter. We wish to estimate the true concentration of arsenic in a new sample based on the new observation $y_0 = 3$ $\mu$g/ml. Figure~\ref{fig:arsenic-fit} shows a scatterplot of the standards with the fitted calibration line. The \ac{ML} estimate of $x_0$ is 2.941 $\mu$g/ml while the inverse estimate is 2.945 $\mu$g/ml, a difference of only 0.004. In practice, the two estimators will not be much different when the coefficient of determination, $R^2$, is close to one. For the arsenic data, $R^2 = 0.9936$ (recall Equation~\ref{eqn:x0-inverse}).
 
-<<arsenic-fit, echo=FALSE, fig.width=5, fig.height=4, par=TRUE, fig.pos='H', fig.scap='Fitted calibration line for the arsenic data', fig.cap='Arsenic data with fitted calibration line. The horizontal arrow indicates the position of the observed response $y_0 = 3$ $\\mu$g/ml and the vertical arrow indicates the position of the ML estimate $\\wh{x}_0 = 2.941$.'>>=
+<<arsenic-fit, echo=FALSE, fig.width=5, fig.height=4, par=TRUE, fig.pos='H', fig.scap='Fitted calibration line for the arsenic data', fig.cap='Arsenic data with fitted calibration line. The horizontal arrow indicates the position of the observed response $y_0 = 3$ $\\mu$g/ml and the vertical arrow indicates the position of the \\ac{ML} estimate $\\wh{x}_0 = 2.941$.'>>=
 arsenic.lm <- lm(measured ~ actual, data = arsenic)
 arsenic.cal <- calibrate(arsenic.lm, y0 = 3)
 plotFit(arsenic.lm, interval = "both", shade = T, 
@@ -325,7 +325,7 @@ where $t_{n+m-p-1}^{1-\alpha/2}$ is the $1-\alpha/2$ quantile of a Student's $t$
 
 There is an interesting relationship in the linear calibration problem (with $m = 1$) between the Wald interval for $x_0$, interval~\eqref{eqn:x0_ci_wald}, and a prediction interval for $\mc{Y}_0$. Let $L_w$ and $U_w$ denote the lower and upper bounds, respectively, from a $100(1 - \alpha)\%$ Wald confidence interval for $x_0$ corresponding to an observed $y_0$. If $\wh{x}_0$ is assumed given, then it is easy to show that a $100(1 - \alpha)\%$ prediction interval for $\mc{Y}_0$ is $(\wh{\beta}_0+\wh{\beta}_1 L_w, \wh{\beta}_0+\wh{\beta}_1 U_w)$ if $\wh{\beta}_1 > 0$ and $(\wh{\beta}_0+\wh{\beta}_1 U_w, \wh{\beta}_0+\wh{\beta}_1 L_w)$ if $\wh{\beta}_1 < 0$. This relationship is illustrated in Figure~\ref{fig:arsenic-wald} for the arsenic example. This method provides the researcher with a quick and simple way to calculate calibration intervals since most statistical software packages provide prediction intervals.
 
-<<arsenic-wald, echo=FALSE, fig.width=5, fig.height=4, par=TRUE, fig.pos='H', fig.scap='Relationship beween Wald interval for $x_0$ and prediction interval for $\\mc{Y}_0$', fig.cap='Scatterplot of the arsenic data with fitted calibration line. The horizontal arrow represents the response measurement for the new sample and the vertical arrow represents the ML estimate of the unknown concentration. The vertical gray band represents a 95\\% Wald confidence interval for $x_0$ corresponding to $y_0 = 3$ and the horizontal gray band represents a 95\\% prediction interval for $\\mc{Y}_0$ corresponding to $x_0 = \\wh{x}_0$.'>>=
+<<arsenic-wald, echo=FALSE, fig.width=5, fig.height=4, par=TRUE, fig.pos='H', fig.scap='Relationship beween Wald interval for $x_0$ and prediction interval for $\\mc{Y}_0$', fig.cap='Scatterplot of the arsenic data with fitted calibration line. The horizontal arrow represents the response measurement for the new sample and the vertical arrow represents the \\ac{ML} estimate of the unknown concentration. The vertical gray band represents a 95\\% Wald confidence interval for $x_0$ corresponding to $y_0 = 3$ and the horizontal gray band represents a 95\\% prediction interval for $\\mc{Y}_0$ corresponding to $x_0 = \\wh{x}_0$.'>>=
 x0.wald.ci <- unlist(calibrate(arsenic, y0 = 3, 
                                interval = "Wald")[c("lower", "upper")])
 y0.ci <- predict(arsenic.lm, list(actual = arsenic.cal$estimate), 
