--- a/Chap-Nonparametric.Rnw
+++ b/Chap-Nonparametric.Rnw
@@ -2,9 +2,9 @@
 
 \chapter{Semiparametric Calibration}
 \label{chap:nonparametric}
-So far, we have considered calibration curves in which the mean response $\mu(x) = \E\left\{\mc{Y} | x\right\}$ has a known form that depends on a small number of unknown parameters $\bm{\beta}$. Finding a good parametric model, however, can be time consuming and require a great deal of expertise. Therefore, it is sometimes useful to assess the effects of the explanatory variable $x$ without completely specifying the structural form of $\mu(x)$. In this chapter, we propose a simple and fast \textit{semiparametric} approach to computing calibration curves. By semiparametric, we mean that only part of the model is specified. Our treatment of semiparametric calibration curves follows the work of \citet{brumback_comment_1999}, \citet{ruppert_selecting_2002}, and \citet{ruppert_semiparametric_2003}, and \citet{crainiceanu_bayesian_2005}. Nonparametric calibration has also been discussed in the literature by, for example, \citet{clark_calibration_1979}, \citet{clark_calibration_1980}, and \citet{rosen_constructing_1995}. Our approach to calibration here is similar to that of \citet{clark_calibration_1980} in that we are "inverting" bias-corrected prediction intervals. However, the LMM representation of P-splines \citep{ruppert_semiparametric_2003} we use here yields a rather simple method for correcting this bias. Rosen and Cohen used a nonparametric bootstrap to obtain calibration intervals from a cubic smoothing spline. Their approach, however, made no attempt to correct for bias in the smoothed calibration curve.
+So far, we have considered calibration curves in which the mean response $\mu(x) = \E\left\{\mc{Y} | x\right\}$ has a known form that depends on a small number of unknown parameters $\bm{\beta}$. Finding a good parametric model, however, can be time consuming and require a great deal of expertise. Therefore, it is sometimes useful to assess the effects of the explanatory variable $x$ without completely specifying the structural form of $\mu(x)$. In this chapter, we propose a simple and fast \textit{semiparametric} approach to computing calibration curves. By semiparametric, we mean that only part of the model is specified. Our treatment of semiparametric calibration curves follows the work of \citet{brumback_comment_1999}, \citet{ruppert_selecting_2002}, and \citet{ruppert_semiparametric_2003}, and \citet{crainiceanu_bayesian_2005}. Nonparametric calibration has also been discussed in the literature by, for example, \citet{clark_calibration_1979}, \citet{clark_calibration_1980}, and \citet{rosen_constructing_1995}. Our approach to calibration here is similar to that of \citet{clark_calibration_1980} in that we are "inverting" bias-corrected prediction intervals. However, the \ac{LMM} representation of \ac{P-spline}s \citep{ruppert_semiparametric_2003} we use here yields a rather simple method for correcting this bias. Rosen and Cohen used a nonparametric bootstrap to obtain calibration intervals from a cubic smoothing spline. Their approach, however, made no attempt to correct for bias in the smoothed calibration curve.
 
-In Section~\ref{sec:pspline-lmm}, we discuss the linear mixed-effects model representation of P-splines. Section~\ref{sec:adjusted-calibration}, proposes a method for obtaining bias-corrected calibration intervals based on the mixed model representation. A small Monte Carlo study demonstrates that the these intervals have coverage probability close to the nominal $1-\alpha$ level. A Bayesian analog of this procedure is proposed in Section~\ref{sec:pspline-bayesian}. Section~\ref{sec:semipar-discussion} concludes this chapter with a discussion on ideas for future research.
+In Section~\ref{sec:pspline-lmm}, we discuss the linear mixed-effects model representation of \ac{P-spline}s. Section~\ref{sec:adjusted-calibration}, proposes a method for obtaining bias-corrected calibration intervals based on the mixed model representation. A small Monte Carlo study demonstrates that the these intervals have coverage probability close to the nominal $1-\alpha$ level. A Bayesian analog of this procedure is proposed in Section~\ref{sec:pspline-bayesian}. Section~\ref{sec:semipar-discussion} concludes this chapter with a discussion on ideas for future research.
 
 \section{Mixed model representation of P-splines}
 \label{sec:pspline-lmm}
@@ -25,7 +25,7 @@ respectively. Although we choose $\bm{Z}$ to be the truncated polynomial spline 
 \begin{equation*}
   \norm{\bc{Y} - \bm{X}\bm{\beta} - \bm{Z}\bm{\alpha}}^2 + \lambda^{2p}\norm{\bm{\alpha}}^2,
 \end{equation*}
-which is proportional to Equation~\eqref{eqn:lmm-pss}, the PSS for an LMM with hierarchical structure $\bc{Y}|\bm{\alpha} \sim \mc{N}(\bm{X}\bm{\beta} + \bm{Z}\bm{\alpha}, \sigma_\epsilon^2\bm{I})$ and $\bm{\alpha} \sim \mc{N}(0, \sigma_\alpha^2\bm{I})$. Dividing through by the error variance, $\sigma_\epsilon^2$, gives the smoothing parameter as $\lambda^{2p} = \sigma_\epsilon^2/\sigma_\alpha^2$, a simple ratio of the variance components. This leads to the following mixed model representation of P-splines \citep{brumback_comment_1999}:
+which is proportional to Equation~\eqref{eqn:lmm-pss}, the PSS for an \ac{LMM} with hierarchical structure $\bc{Y}|\bm{\alpha} \sim \mc{N}(\bm{X}\bm{\beta} + \bm{Z}\bm{\alpha}, \sigma_\epsilon^2\bm{I})$ and $\bm{\alpha} \sim \mc{N}(0, \sigma_\alpha^2\bm{I})$. Dividing through by the error variance, $\sigma_\epsilon^2$, gives the smoothing parameter as $\lambda^{2p} = \sigma_\epsilon^2/\sigma_\alpha^2$, a simple ratio of the variance components. This leads to the following mixed model representation of \ac{P-spline}s \citep{brumback_comment_1999}:
 \begin{equation}
 \label{eqn:pspline-lmm}
   \bc{Y} = \bm{X}\bm{\beta} + \bm{Z}\bm{\alpha} + \bm{\epsilon}, \quad 
@@ -41,21 +41,21 @@ which is proportional to Equation~\eqref{eqn:lmm-pss}, the PSS for an LMM with h
     \bm{0} & \sigma_\epsilon^2\bm{I}
   \end{bmatrix}\right).
 \end{equation}
-The parameters $\bm{\beta}$, $\bm{\alpha}$, $\sigma_\alpha^2$, and $\sigma_\epsilon^2$ can all be estimated using standard mixed model methodology and software. Under this framework, a P-spline is really just the BLUP from a special LMM! The amount of smoothing is determined automatically by $\wh{\lambda} = \wh{\sigma}_\epsilon^2/\wh{\sigma}_\alpha^2$, where $\wh{\sigma}_\epsilon^2$ and $\wh{\sigma}_\alpha^2$ are the REML estimates of $\sigma_\epsilon^2$ and $\sigma_\alpha^2$, respectively. Although $\lambda$ could be estimated via ordinary ML estimation or cross-validation, \citet{krivobokova_note_2007} showed that the REML-based estimate is less affected by the presence of different correlation structures for the errors, $\bm{\epsilon}$. The BLUP of $\bm{\mu}$, denoted $\wt{\bm{\mu}}$, was given in Equation~\eqref{eqn:mu-blup}, however, an equivalent expression for $\wt{\bm{\mu}}$ is given by
+The parameters $\bm{\beta}$, $\bm{\alpha}$, $\sigma_\alpha^2$, and $\sigma_\epsilon^2$ can all be estimated using standard mixed model methodology and software. Under this framework, a \ac{P-spline} is really just the \ac{BLUP} from a special \ac{LMM}! The amount of smoothing is determined automatically by $\wh{\lambda} = \wh{\sigma}_\epsilon^2/\wh{\sigma}_\alpha^2$, where $\wh{\sigma}_\epsilon^2$ and $\wh{\sigma}_\alpha^2$ are the \ac{REML} estimates of $\sigma_\epsilon^2$ and $\sigma_\alpha^2$, respectively. Although $\lambda$ could be estimated via ordinary \ac{ML} estimation or cross-validation, \citet{krivobokova_note_2007} showed that the \ac{REML}-based estimate is less affected by the presence of different correlation structures for the errors, $\bm{\epsilon}$. The \ac{BLUP} of $\bm{\mu}$, denoted $\wt{\bm{\mu}}$, was given in Equation~\eqref{eqn:mu-blup}, however, an equivalent expression for $\wt{\bm{\mu}}$ is given by
 \begin{equation*}
   \wt{\bm{\mu}} = \bm{\Omega}\left( \bm{\Omega}'\bm{\Omega} + \frac{\sigma_\epsilon^2}{\sigma_\alpha^2}\bm{D} \right)^{-1}\bm{\Omega}'\bc{Y} = \bm{S}\bc{Y}, \quad \bm{\Omega} = \left(\bm{X}; \bm{Z}\right),
 \end{equation*}
-where $\textbf{D} = \diag\left\{\bm{0}_{(p+1) \times (p+1)}, \bm{I}_{K \times K}\right\}$. The vector of fitted values (i.e., the EBLUP of $\bm{\mu}$) is then just
+where $\textbf{D} = \diag\left\{\bm{0}_{(p+1) \times (p+1)}, \bm{I}_{K \times K}\right\}$. The vector of fitted values (i.e., the \ac{EBLUP} of $\bm{\mu}$) is then just
 \begin{equation*}
   \wh{\bm{\mu}} = \bm{\Omega}\left( \bm{\Omega}'\bm{\Omega} + \frac{\wh{\sigma}_\epsilon^2}{\wh{\sigma}_\alpha^2}\bm{D} \right)^{-1}\bm{\Omega}'\bc{Y},
 \end{equation*}
-where $\wh{\sigma}_\epsilon^2$ and $\wh{\sigma}_\alpha^2$ are the REML estimates of $\sigma_\epsilon^2$ and $\sigma_\alpha^2$, respectively.
+where $\wh{\sigma}_\epsilon^2$ and $\wh{\sigma}_\alpha^2$ are the \ac{REML} estimates of $\sigma_\epsilon^2$ and $\sigma_\alpha^2$, respectively.
 
-As described in \citet{robinson_that_1991}, the LMM has a simple Bayesian analog. For the mixed model representation, Equation~\eqref{eqn:pspline-lmm}, if $\bm{\beta}$, $\sigma_\epsilon^2$, and $\sigma_\alpha^2$ are all given improper uniform priors, then the posterior of $\bm{\mu}$ is $\mc{N}\left( \wh{\bm{\mu}}, \sigma_\epsilon^2 \bm{S} \right)$. Note the use of the variance-covariance matrix $\sigma_\epsilon^2\bm{S}$ rather than the variance-covariance matrix $\sigma_\epsilon^2\bm{S}\bm{S}'$ from Equation~\eqref{eqn:cov}. It is easy to see that $\left[\bm{S}\right]_{ij} \ge \left[\bm{S}\bm{S}'\right]_{ij}$, hence, confidence and prediction intervals based on the Bayesian variance-covariance matrix $\sigma_\epsilon^2\bm{S}$ are wider than those based on $\sigma_\epsilon^2\bm{S}\bm{S}'$. As pointed out by \citet{hastie_gams_1990}, the "extra wideness" is due to the fact that $\bm{S}$ accounts for squared bias whereas $\bm{S}\bm{S}'$ does not.
+As described in \citet{robinson_that_1991}, the \ac{LMM} has a simple Bayesian analog. For the mixed model representation, Equation~\eqref{eqn:pspline-lmm}, if $\bm{\beta}$, $\sigma_\epsilon^2$, and $\sigma_\alpha^2$ are all given improper uniform priors, then the posterior of $\bm{\mu}$ is $\mc{N}\left( \wh{\bm{\mu}}, \sigma_\epsilon^2 \bm{S} \right)$. Note the use of the variance-covariance matrix $\sigma_\epsilon^2\bm{S}$ rather than the variance-covariance matrix $\sigma_\epsilon^2\bm{S}\bm{S}'$ from Equation~\eqref{eqn:cov}. It is easy to see that $\left[\bm{S}\right]_{ij} \ge \left[\bm{S}\bm{S}'\right]_{ij}$, hence, confidence and prediction intervals based on the Bayesian variance-covariance matrix $\sigma_\epsilon^2\bm{S}$ are wider than those based on $\sigma_\epsilon^2\bm{S}\bm{S}'$. As pointed out by \citet{hastie_gams_1990}, the "extra wideness" is due to the fact that $\bm{S}$ accounts for squared bias whereas $\bm{S}\bm{S}'$ does not.
 
 \section{Bias-corrected calibration intervals}
 \label{sec:adjusted-calibration}
-As mentioned in Section~\ref{sec:pspline-inference}, the estimated mean response $\wh{\mu}(x)$ is biased. Inference for P-splines based on the LMM representation, Equation~\eqref{eqn:pspline-lmm}, differs depending on whether we take the randomness of $\bm{\alpha}$ into account. Ignoring the randomness in $\bm{\alpha}$ leads to the same intervals given in Section~\ref{sec:pspline-inference}. We can account for bias in the confidence and prediction intervals, however, by conditioning on the random effects $\bm{\alpha}$. To see this, note that the bias vector of $\wt{\bm{\mu}}$, conditional on $\bm{\alpha}$, is 
+As mentioned in Section~\ref{sec:pspline-inference}, the estimated mean response $\wh{\mu}(x)$ is biased. Inference for \ac{P-spline}s based on the \ac{LMM} representation, Equation~\eqref{eqn:pspline-lmm}, differs depending on whether we take the randomness of $\bm{\alpha}$ into account. Ignoring the randomness in $\bm{\alpha}$ leads to the same intervals given in Section~\ref{sec:pspline-inference}. We can account for bias in the confidence and prediction intervals, however, by conditioning on the random effects $\bm{\alpha}$. To see this, note that the bias vector of $\wt{\bm{\mu}}$, conditional on $\bm{\alpha}$, is 
 \begin{equation}
 \label{eqn:conditional-bias}
   \E\left\{\wt{\bm{\mu}} - \bm{\mu} | \bm{\alpha}\right\} = \bm{X}\left[ \E\left\{\wt{\bm{\beta}} | \bm{\alpha}\right\} - \bm{\beta} \right] + \bm{Z}\Big[ \E\left\{\wt{\bm{\alpha}} | \bm{\alpha}\right\} - \bm{\alpha} \Big].
@@ -105,7 +105,7 @@ arrows(x0, f(x0), parusr[1], f(x0))
 
 Notice that the sine wave plotted in Figure~\ref{fig:sine-wave} is scaled to lie in $[0, 1] \times [0, 1]$ with a period of 2. For each of 1,000 simulations, we used $10$, $30$, and $50$ uniformly spaced designed points on the domain $[0, 1]$ with $1$, $2$, and $3$ independent replicates of the response at each design point. The errors were generated as i.i.d. $\mc{N}(0, 0.05^2)$ random variates and the true unknown was chosen to be $x_0 = \Sexpr{x0}$ (hence, $\mu_0 \approx \Sexpr{round(f(x0), 4)}$).
 
-Tables~\ref{tab:pspline-monte-carlo-1}-\ref{tab:pspline-monte-carlo-2} display the estimated coverage probability for this technique applied to the sine wave experiment for both calibration (Table~\ref{tab:pspline-monte-carlo-1}) and regulation (Table~\ref{tab:pspline-monte-carlo-2}). For comparison, we also transformed the data to an equivalent linear model and applied Fieller's method (which yields an exact $95\%$ confidence interval for $x_0$). Clearly, our bias-corrected intervals performed well for quadratic (degree = 2) and cubic (degree = 3) P-splines with increasing sample size without sacrificing interval length. Notice, however, that the calibration results are somewhat conservative (i.e., the coverage probability is slightly larger than $0.95$) while the regulation intervals tend to hit the target coverage $1-\alpha = 0.95$. The reason for this is that the bias in predicting a future observation is the same as that for estimating the mean response, but the former has larger variance. Therefore, the bias accounts for a smaller portion of the mean-squared error in prediction (i.e., the bias gets "washed out" by a larger variance). Thus, for larger samples (perhaps $n \ge 20$ with $m \ge 1$ replicates at each design point), calibration intervals could be computed with or without adjusting for bias. Regulation intervals, on the other hand, should always be adjusted for bias.
+Tables~\ref{tab:pspline-monte-carlo-1}-\ref{tab:pspline-monte-carlo-2} display the estimated coverage probability for this technique applied to the sine wave experiment for both calibration (Table~\ref{tab:pspline-monte-carlo-1}) and regulation (Table~\ref{tab:pspline-monte-carlo-2}). For comparison, we also transformed the data to an equivalent linear model and applied Fieller's method (which yields an exact $95\%$ confidence interval for $x_0$). Clearly, our bias-corrected intervals performed well for quadratic (degree = 2) and cubic (degree = 3) \ac{P-spline}s with increasing sample size without sacrificing interval length. Notice, however, that the calibration results are somewhat conservative (i.e., the coverage probability is slightly larger than $0.95$) while the regulation intervals tend to hit the target coverage $1-\alpha = 0.95$. The reason for this is that the bias in predicting a future observation is the same as that for estimating the mean response, but the former has larger variance. Therefore, the bias accounts for a smaller portion of the mean-squared error in prediction (i.e., the bias gets "washed out" by a larger variance). Thus, for larger samples (perhaps $n \ge 20$ with $m \ge 1$ replicates at each design point), calibration intervals could be computed with or without adjusting for bias. Regulation intervals, on the other hand, should always be adjusted for bias.
 
 <<sim1-sim2, echo = FALSE>>=
 load("/home/w108bmg/Desktop/Dissertation/Data/sim1.RData")
@@ -183,13 +183,13 @@ plot(proof ~ age, data=whiskey, xlab="Age (years)", ylab="Proof",
      pch=19)
 @
 
-We begin by fitting a simple quadratic P-spline with five knots:
+We begin by fitting a simple quadratic \ac{P-spline} with five knots:
 \begin{equation*}
   \mu(\text{\texttt{age}}_i) = \beta_0 + \beta_1\text{\texttt{age}}_i + \beta_2\text{\texttt{proof}}_i^2 + \sum_{k = 1}^5\alpha_k\left( \text{\texttt{proof}}_i - \xi_k \right)_+^2.
 \end{equation*}
-The number of knots and their placement were determined automatically using the methods described in Section~\ref{sec:penalized-regression-splines}. The fitted model is depicted in the right-hand side of Figure~\ref{fig:whiskey-calibration}. It appears from the scatterplot that a simple quadratic may be sufficient (i.e., $\alpha_i = 0$, $i = 1, \dotsc, 5$); this fit is depicted in the left side of Figure~\ref{fig:whiskey-calibration}. Both models are different, but the fits are indistinguishable to the human eye. In fact, both models produce identical calibration intervals for $x_0$ (when rounded to four decimal places). For the linear model, we have $\wh{x}_0 = \Sexpr{cal1$estimate}$ years with a 95\% confidence interval for $x_0$ of $(\Sexpr{cal1$lower}, \Sexpr{cal1$upper})$. Similarly, for the P-spline model, we have $\wh{x}_0 = \Sexpr{cal2["estimate"]}$ years with a 95\% (bias-corrected) confidence interval for $x_0$ of $(\Sexpr{cal2["lower"]}, \Sexpr{cal2["upper"]})$. The reason we get the same answer from both models is that the polynomial basis part of the penalized spline model is sufficient for modeling the curvature of $\mu(\texttt{age})$, therefore, the spline basis terms are effectively "zeroed out" (see Figure~\ref{fig:whiskey-paths}). Although our P-spline approach to obtaining calibration intervals requires large samples, in this small sample example they happen to coincide with the (classical) inversion limits from the quadratic linear model. If we did not correct for bias in the P-spline model, however, the confidence interval obtained for $x_0$ would be $(4.7223, 5.7016)$, which is too narrow.
+The number of knots and their placement were determined automatically using the methods described in Section~\ref{sec:penalized-regression-splines}. The fitted model is depicted in the right-hand side of Figure~\ref{fig:whiskey-calibration}. It appears from the scatterplot that a simple quadratic may be sufficient (i.e., $\alpha_i = 0$, $i = 1, \dotsc, 5$); this fit is depicted in the left side of Figure~\ref{fig:whiskey-calibration}. Both models are different, but the fits are indistinguishable to the human eye. In fact, both models produce identical calibration intervals for $x_0$ (when rounded to four decimal places). For the linear model, we have $\wh{x}_0 = \Sexpr{cal1$estimate}$ years with a 95\% confidence interval for $x_0$ of $(\Sexpr{cal1$lower}, \Sexpr{cal1$upper})$. Similarly, for the \ac{P-spline} model, we have $\wh{x}_0 = \Sexpr{cal2["estimate"]}$ years with a 95\% (bias-corrected) confidence interval for $x_0$ of $(\Sexpr{cal2["lower"]}, \Sexpr{cal2["upper"]})$. The reason we get the same answer from both models is that the polynomial basis part of the penalized spline model is sufficient for modeling the curvature of $\mu(\texttt{age})$, therefore, the spline basis terms are effectively "zeroed out" (see Figure~\ref{fig:whiskey-paths}). Although our \ac{P-spline} approach to obtaining calibration intervals requires large samples, in this small sample example they happen to coincide with the (classical) inversion limits from the quadratic linear model. If we did not correct for bias in the \ac{P-spline} model, however, the confidence interval obtained for $x_0$ would be $(4.7223, 5.7016)$, which is too narrow.
 
-<<whiskey-calibration, echo = FALSE, opts.label = 'fig.7by5', par = TRUE, fig.pos = 'H', fig.scap = 'Fitted  models for the whiskey data', fig.cap = 'Fitted  models for the whiskey data. \\textit{Left}: Quadratic linear model with 95\\% (pointwise) prediction band. \\textit{Right}: Quadratic P-spline with five knots and 95\\% (pointwise) bias-corrected prediction band.'>>=
+<<whiskey-calibration, echo = FALSE, opts.label = 'fig.7by5', par = TRUE, fig.pos = 'H', fig.scap = 'Fitted  models for the whiskey data', fig.cap = 'Fitted  models for the whiskey data. \\textit{Left}: Quadratic linear model with 95\\% (pointwise) prediction band. \\textit{Right}: Quadratic \\ac{P-spline} with five knots and 95\\% (pointwise) bias-corrected prediction band.'>>=
 par(mfrow = c(1, 2))
 plotFit(mod1, xlab = "Age (years)", ylab = "Proof", pch = 19, 
         lwd.fit = 2, interval = "prediction", shade = T, col.pred = "skyblue")
@@ -215,7 +215,7 @@ segments(cal2["upper"], 108, cal2["upper"], parusr[3])
 segments(cal2["estimate"], 108, cal2["estimate"], parusr[3])
 @
 
-<<whiskey-paths, echo = FALSE, opts.label = 'fig.7by4', par = TRUE, fig.pos = 'H', fig.scap = 'Spline coefficient paths for the whiskey example', fig.cap = 'Profiles of spline coefficients for the P-spline in Figure~\\ref{fig:whiskey-calibration}, as the smoothing parameter $\\lambda$ is varied from zero to three. Coefficients are plotted versus the smoothing parameter $\\lambda$; the REML estimate is $\\wh{\\lambda} = 385.2228$.'>>=
+<<whiskey-paths, echo = FALSE, opts.label = 'fig.7by4', par = TRUE, fig.pos = 'H', fig.scap = 'Spline coefficient paths for the whiskey example', fig.cap = 'Profiles of spline coefficients for the \\ac{P-spline} in Figure~\\ref{fig:whiskey-calibration}, as the smoothing parameter $\\lambda$ is varied from zero to three. Coefficients are plotted versus the smoothing parameter $\\lambda$; the \\ac{REML} estimate is $\\wh{\\lambda} = 385.2228$.'>>=
 C.mat <- mod2$C
 CTC <- t(C.mat) %*% C.mat
 D.mat <- mod2$D
@@ -238,7 +238,7 @@ abline(h = 0, lwd = 2)
 
 \section{Bayesian semiparametric calibration}
 \label{sec:pspline-bayesian}
-The mixed model P-spline, Equation~\eqref{eqn:pspline-lmm}, provides a simple method for estimating the smoothing parameter and accounting for bias in calibration intervals. These intervals, however, do not account for the variability of the estimated smoothing parameter $\wh{\lambda} = \wh{\sigma}_\epsilon^2/\wh{\sigma}_\alpha^2$; similar to inference in LMMs which typically ignores the variability of $\wh{\bm{V}}$. This problem can be remedied by adopting a fully Bayesian approach which we now discuss. 
+The mixed model \ac{P-spline}, Equation~\eqref{eqn:pspline-lmm}, provides a simple method for estimating the smoothing parameter and accounting for bias in calibration intervals. These intervals, however, do not account for the variability of the estimated smoothing parameter $\wh{\lambda} = \wh{\sigma}_\epsilon^2/\wh{\sigma}_\alpha^2$; similar to inference in \ac{LMM}s which typically ignores the variability of $\wh{\bm{V}}$. This problem can be remedied by adopting a fully Bayesian approach which we now discuss. 
 
 Let $\pi(\cdot)$ denote a probability density function. Following \citet{hoadley_bayesian_1970}, we assume that the calibration experiment contains no information about $x_0$ and that the priors for $x_0$ and the calibration experiment are independent; thus,
 \begin{equation*}
@@ -312,9 +312,9 @@ segments(cal1$upper, -5, cal1$upper, 20, lwd = 1)
 segments(cal1$estimate, -5, cal1$estimate, 20, lwd = 1)
 @
 
-Figure~\ref{fig:elisa-jags} shows a fitted semiparametric calibration curve, a quadratic P-spline with five interior knots. Also shown is the posterior mean based on a fully Bayesian P-spline model. Seeing as how the concentration should not be negative, we used a $\mc{U}[0, 50]$ prior for $x_0$, though, lognormal or gamma priors may also be reasonable. The frequentist estimate of $x_0$ is obtained by (numerically) inverting the fitted P-spline: $\wh{x}_0 = 9.345$. A (bias-corrected) inversion interval for $x_0$ based on Equation~\eqref{eqn:bc-inversion-interval} is $(7.462, 11.711)$. As previously mentioned, this interval does not account for the variability of the estimated smoothing parameter $\wh{\sigma}_\epsilon^2/\wh{\sigma}_\alpha^2$, hence, we expect the Bayesian credible interval to be slightly wider. The estimator we use for the Bayesian model is the posterior mode of $x_0$ which is equal to $9.285$. There are a number of ways to compute a 95\% credible interval from a given posterior; for example, \textit{highest posterior density} (HPD) intervals. Here we simply report the 0.025 and 0.975 quantiles of the posterior which are $7.250$ and $11.776$, respectively. As noted earlier, these limits are slightly wider than the corresponding frequentist limits, but this extra wideness is likely due to the added uncertainty of the estimated smoothing parameter. \citet{ori_constructing_1995} also obtained calibration intervals for these data. Their approach involved bootstrapping a cross-validated cubic smoothing spline, but did not account for bias in $\wh{\mu}(x)$. For a brief discussion on bias correction for nonparametric regression using the bootstrap see \citet[pp. 362-366]{davison_bootstrap_1997}.
+Figure~\ref{fig:elisa-jags} shows a fitted semiparametric calibration curve, a quadratic \ac{P-spline} with five interior knots. Also shown is the posterior mean based on a fully Bayesian \ac{P-spline} model. Seeing as how the concentration should not be negative, we used a $\mc{U}[0, 50]$ prior for $x_0$, though, lognormal or gamma priors may also be reasonable. The frequentist estimate of $x_0$ is obtained by (numerically) inverting the fitted \ac{P-spline}: $\wh{x}_0 = 9.345$. A (bias-corrected) inversion interval for $x_0$ based on Equation~\eqref{eqn:bc-inversion-interval} is $(7.462, 11.711)$. As previously mentioned, this interval does not account for the variability of the estimated smoothing parameter $\wh{\sigma}_\epsilon^2/\wh{\sigma}_\alpha^2$, hence, we expect the Bayesian credible interval to be slightly wider. The estimator we use for the Bayesian model is the posterior mode of $x_0$ which is equal to $9.285$. There are a number of ways to compute a 95\% credible interval from a given posterior; for example, \textit{highest posterior density} (HPD) intervals. Here we simply report the 0.025 and 0.975 quantiles of the posterior which are $7.250$ and $11.776$, respectively. As noted earlier, these limits are slightly wider than the corresponding frequentist limits, but this extra wideness is likely due to the added uncertainty of the estimated smoothing parameter. \citet{ori_constructing_1995} also obtained calibration intervals for these data. Their approach involved bootstrapping a cross-validated cubic smoothing spline, but did not account for bias in $\wh{\mu}(x)$. For a brief discussion on bias correction for nonparametric regression using the bootstrap see \citet[pp. 362-366]{davison_bootstrap_1997}.
 
-<<elisa-jags, echo = FALSE, opts.label = 'fig.7by4', par = TRUE, fig.pos = 'H', fig.scap = 'Bayesian nonparametric calibration for ELISA data', fig.cap = 'Nonparametric calibration for ELISA data. \\textit{Left}: Bayesian P-spline with posterior and 95\\% credible interval for $x_0$. The shaded blue region represents the (pointwise) prediction band and the density curve represents the posterior of $x_0$. \\textit{Right}: Mixed-effects model P-spline with bias-corrected 95\\% calibration interval for $x_0$. The shaded blue region represents the (pointwise) bias-corrected predction band.', message = FALSE>>=
+<<elisa-jags, echo = FALSE, opts.label = 'fig.7by4', par = TRUE, fig.pos = 'H', fig.scap = 'Bayesian nonparametric calibration for ELISA data', fig.cap = 'Nonparametric calibration for ELISA data. \\textit{Left}: Bayesian \\ac{P-spline} with posterior and 95\\% credible interval for $x_0$. The shaded blue region represents the (pointwise) prediction band and the density curve represents the posterior of $x_0$. \\textit{Right}: Mixed-effects model \\ac{P-spline} with bias-corrected 95\\% calibration interval for $x_0$. The shaded blue region represents the (pointwise) bias-corrected predction band.', message = FALSE>>=
 
 ## P-spline model and bias-corrected (inversion) calibration intervals
 mod2 <- with(elisa, pspline(conc, resp, degree = 2))
@@ -363,8 +363,8 @@ segments(cal2[3], 20, cal2[3], -5, col = "purple", lwd = 1)
   \textbf{Method} & \textbf{Estimate} & \textbf{95\% interval} \\
   \midrule
   Parametric (homoscedastic errors)   & $9.184$ & $(7.356, 11.657)$ \\
-  P-spline (bias-corrected)            & $9.345$ & $(7.462, 11.711)$ \\
-  P-spline (Bayesian)                 & $9.285$ & $(7.250, 11.776)$ \\
+  \ac{P-spline} (bias-corrected)            & $9.345$ & $(7.462, 11.711)$ \\
+  \ac{P-spline} (Bayesian)                 & $9.285$ & $(7.250, 11.776)$ \\
   \bottomrule
 \end{tabular}
 \caption[Calibration results for the ELISA data]{Point and interval estimates for $x_0$ for the ELISA data with $y_0 = 20$.}
@@ -372,13 +372,13 @@ segments(cal2[3], 20, cal2[3], -5, col = "purple", lwd = 1)
 
 \section{Discussion}
 \label{sec:semipar-discussion}
-We have proposed a new method for calibration in a semiparametric setting based on the mixed model approach to smoothing that corrects for bias in the smoothed calibration curve. While the idea of using LMMs for penalized smoothing is not new (see, for example, \citet[pp. 13 - 17]{demidenko_mixed_2013}), this approach has never been adapted for the calibration problem as we have proposed here. By using a simple Monte Carlo experiment, we have demonstrated that bias-corrected prediction intervals can be used to (numerically) obtain calibration intervals for the unknown $x_0$ that have good coverage probabilities. We have discussed a situation where this bias-correction is more serious (i.e., regulation, or rather, calibration where the unknown $x_0$ corresponds to some specified mean response $\mu_0$). Finally, we developed a Bayesian framework for semiparametric calibration by extending the approach originally put forth by \citet{hoadley_bayesian_1970} for linear calibration (see Section~\ref{sec:bayesian}). The frequentist framework, while fast and simple, has the same disadvantage inherent in LMM inference; that is, the variance of the estimated smoothing parameter (which is a function of the estimated variance components) is ignored. The Bayesian approach handles this by incorporating prior information for all unknown parameters in the model, leading to slightly wider calibration intervals. The Bayesian approach we presented, however, is slower and more difficult to implement in practice.
+We have proposed a new method for calibration in a semiparametric setting based on the mixed model approach to smoothing that corrects for bias in the smoothed calibration curve. While the idea of using \ac{LMM}s for penalized smoothing is not new (see, for example, \citet[pp. 13 - 17]{demidenko_mixed_2013}), this approach has never been adapted for the calibration problem as we have proposed here. By using a simple Monte Carlo experiment, we have demonstrated that bias-corrected prediction intervals can be used to (numerically) obtain calibration intervals for the unknown $x_0$ that have good coverage probabilities. We have discussed a situation where this bias-correction is more serious (i.e., regulation, or rather, calibration where the unknown $x_0$ corresponds to some specified mean response $\mu_0$). Finally, we developed a Bayesian framework for semiparametric calibration by extending the approach originally put forth by \citet{hoadley_bayesian_1970} for linear calibration (see Section~\ref{sec:bayesian}). The frequentist framework, while fast and simple, has the same disadvantage inherent in \ac{LMM} inference; that is, the variance of the estimated smoothing parameter (which is a function of the estimated variance components) is ignored. The Bayesian approach handles this by incorporating prior information for all unknown parameters in the model, leading to slightly wider calibration intervals. The Bayesian approach we presented, however, is slower and more difficult to implement in practice.
 
 \subsection{Priors}
-Although we used a uniform prior for $x_0$ in our examples, such a prior for $x$ is unlikely to be useful in general and we recommend a more careful elicitation of prior information. A sensitivity analysis should also be carried out to see if the results are sensitive to the choice of prior for $x_0$. Although inverse gamma priors are commonly used in practice as noninformative priors for scale parameters in hierarchical models (e.g., the variance components in a LMM), \citet{gelman_prior_2006} argued against their use. Instead, Gelman adovcated the use of conditionally conjugate priors from a new folded-noncentral-$t$ family.
+Although we used a uniform prior for $x_0$ in our examples, such a prior for $x$ is unlikely to be useful in general and we recommend a more careful elicitation of prior information. A sensitivity analysis should also be carried out to see if the results are sensitive to the choice of prior for $x_0$. Although inverse gamma priors are commonly used in practice as noninformative priors for scale parameters in hierarchical models (e.g., the variance components in a \ac{LMM}), \citet{gelman_prior_2006} argued against their use. Instead, Gelman adovcated the use of conditionally conjugate priors from a new folded-noncentral-$t$ family.
 
 \subsection{Future work}
-The methods proposed in this chapter open the door to plenty of future research opportunities. Perhaps, the most interesting (and logical) next step would be the inclusion of constraints. For example, we have assumed that the calibration curve is monotonic over the range of interest. Fortunately, this is not usually a concern when the data are collected from a carefully designed experiment. The semiparametric fit, however, is not necessarily monotonic for every value of the smoothing parameter which may cause problems when, say, obtaining a bias-corrected calibration interval. It is possible, however, to incorporate constraints, such as monotonicity, using the general projection method described in \citet{mammen_general_2001}. Until such a constraint can be smoothly incorporated (no pun intended) into our semiparametric approach to calibration, we can instead rely on inference regarding the first derivative of $f$ as described in \citet[pp. 151-156]{ruppert_semiparametric_2003}. For instance, if we assume that $f$ is monotonically increasing (decreasing) over the interval $[a, b]$, then a plot of the estimated first derivative of the regression function should lie completely above (below) the $x$-axis. This derivative function can be estimated in exactly the same way as the regression function itself, that is, using P-splines. Therefore, a thorough calibration analysis might include a plot of the data with fitted mean response, supplemented by a plot of the estimated first derivative function (possibly with a confidence band). For instance, we might supplement our analysis of the ELISA data with the following graphic:
+The methods proposed in this chapter open the door to plenty of future research opportunities. Perhaps, the most interesting (and logical) next step would be the inclusion of constraints. For example, we have assumed that the calibration curve is monotonic over the range of interest. Fortunately, this is not usually a concern when the data are collected from a carefully designed experiment. The semiparametric fit, however, is not necessarily monotonic for every value of the smoothing parameter which may cause problems when, say, obtaining a bias-corrected calibration interval. It is possible, however, to incorporate constraints, such as monotonicity, using the general projection method described in \citet{mammen_general_2001}. Until such a constraint can be smoothly incorporated (no pun intended) into our semiparametric approach to calibration, we can instead rely on inference regarding the first derivative of $f$ as described in \citet[pp. 151-156]{ruppert_semiparametric_2003}. For instance, if we assume that $f$ is monotonically increasing (decreasing) over the interval $[a, b]$, then a plot of the estimated first derivative of the regression function should lie completely above (below) the $x$-axis. This derivative function can be estimated in exactly the same way as the regression function itself, that is, using \ac{P-spline}s. Therefore, a thorough calibration analysis might include a plot of the data with fitted mean response, supplemented by a plot of the estimated first derivative function (possibly with a confidence band). For instance, we might supplement our analysis of the ELISA data with the following graphic:
 
 <<derivative-plot, echo=FALSE, fig.width=5, fig.height=4, par=TRUE, fig.pos='H', fig.scap='First derivative plot for the ELISA example', fig.cap='Estimate of the first derivative of the regression function for the ELISA example with a 95\\% global confidence band. A horizontal reference line is displayed at zero on the $y$-axis. This plot was produced using the \\code{R} package \\pkg{SemiPar}.', error=FALSE, message=FALSE, warning=FALSE>>=
 library(SemiPar)
